--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="main">
 <h1>Mudgin Coffee</h1>
-<button id="buy"Начать делать заказ</button>
+<button id="buy">Начать делать заказ</button>
 </div>
 </body>
 </html>
