--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Mudgin Coffee</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Mudgin Coffee</title>
+    <style>
+         * {
+           margin: 0;
+           padding: 0;
+           box-sizing: border-box;
+         }
+         body {
+            font-family: 'SrbijaSans-Regularэб 'sans-serif';
+            font-weight: 200;
+            color: var(--tg-theme-text-color);
+            background: var(--tg-theme-bg-color);
+         }
+         #main {
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+         }
+         h1 {
+            margin-top: 50px;
+            margin-bottom: 10px;
+         }
+
+    </style>
+
 </head>
 <body>
 <div id="main">
 <h1>Mudgin Coffee</h1>
-<button id="buy">Начать делать заказ</button>
+<button id="buy"Начать делать заказ</button>
 </div>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<scrip
 </body>
 </html>
