--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@ h1{
     margin-top: 50px;
     margin-bottom: 10px;
 }
+img {
+    width: 70px;
+    margin: 30px auto;
+}
+p {
+    width: 350px;
+    margin: 0 auto;
+}
+button {
+    border: 0;
+    border-radius: 5px;
+    margin-top: 50px;
+    height: 60px;
+    width: 200px;
+    font-size: 20px;
+}
 
 </style>
 </head>
