--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mudgin Coffee</title>
     <style>
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body {
-    font-family: 'SrbijaSans-Regularэб 'sans-serif';
+    font-family: 'Courier Prime', monospace;
     font-weight: 200;
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-bg-color);
