--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ let main = document.getElementById("main");
 let order_form = document.getElementById("order_form");
 buy.addEventListener("click", () => {
     main.style.display = "none";
+    order_form.style.display = "block";
 });
 </script>
 </body>
