--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ buy.addEventListener("click", () => {
     main.style.display = "none";
     order_form.style.display = "block";
 });
+order.addEventListener("click", () => {
+    bot.close();
+});
 </script>
 </body>
 </html>
