--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@ order.addEventListener("click", () => {
         error.innerText = "Ошибка в номере телефона";
         returt;
     }
-    sure_text.innerText = user_phone.value + " ?";
-    order_form.style.display = "none";
-    sure.style.display = "block";
-    //bot.close();
+    //sure_text.innerText = user_phone.value + " ?";
+    //order_form.style.display = "none";
+    //sure.style.display = "block";
 });
 </script>
 </body>
