--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ order.addEventListener("click", () => {
     let error = document.getElementById("error");
     if(user_phone.lenght < 10) {
         error.innerText = "Ошибка в номере телефона";
-        returt;
+        return;
     }
     sure_text.innerText = user_phone + " ?";
     order_form.style.display = "none";
