--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ order.addEventListener("click", () => {
     }
     else {  
         sure_text.innerText = user_phone + " ?";
+        main.style.display = "none";
         order_form.style.display = "none";
         sure.style.display = "block";
     }
