--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ order.addEventListener("click", () => {
     let user_name = document.getElementById("user_name").value;
     let user_phone = document.getElementById("user_phone").value;
     let error = document.getElementById("error");
-    if(user_phone.length < 10) {
+    if (user_phone.length < 10) {
+        console.log("else");
         error.innerText = "Ошибка в номере телефона";
     }
     else {
