--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@ input:focus {
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
 </div>
-<form id="order_form">
+<div id="order_form">
 <p id="error"> </p>
 <input type="text" placeholder="Введите имя" id="user_name">
 <input type="text" placeholder="Введите телефон" id="user_phone">
 <button id="order">Оформить заказ</button>
-</form>
+</div>
 <div id="sure">
 <p>Ваш телефон</p><br>
 <h4 id="sure_text"></h4>
