--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ order.addEventListener("click", () => {
     if (user_name.length < 4) {
         mistake.innerText = "У вас слишком короткое имя :3";       
     }
-    if else (user_phone.length < 10) {
+    else if (user_phone.length < 10) {
         mistake.innerText = "Ошибка в номере телефона";
     }
     else {
