--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ order.addEventListener("click", () => {
     else {
         sure_text.innerText = user_phone + " ?";
         mistake.innerText = " ";
+        user_phone = "";
         order_form.style.display = "none";
         sure.style.display = "block";
     }
