--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ input:focus {
 <div id="order_form">
 <p id="error"> </p>
 <input type="text" placeholder="Введите имя" id="user_name">
-<input type="text" placeholder="Введите телефон" id="user_phone">
+<input type="number" placeholder="Введите телефон" id="user_phone">
 <button id="order">Оформить заказ</button>
 </div>
 <div id="sure">
