--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ input {
     font-size: 14px;
     border: 2px solid silver;
     border-radius: 5px;
+    background: var(--tg-theme-secondary-bg-color);
 }
 input:focus {
     border-color: var(--tg-theme-button-color);
