--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ input:focus {
 <div id="order_form">
 <p id="error"> </p>
 <input type="text" placeholder="Введите имя" id="user_name">
-<input type="tel" placeholder="Введите телефон" id="user_phone" class="phone">
+<input type="tel" placeholder="Введите номер телефона" id="user_phone" class="phone">
 <button id="order">Оформить заказ</button>
 </div>
 <div id="sure">
