--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ input:focus {
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-secondary-bg-color);
     width: 100%;
+    border: 2px solid;
+    border-radius: 8px;
 }
 </style>
 </head>
