--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ input:focus {
 #country {
     text-align: center;
     color: var(--tg-theme-text-color);
-    background: var(--tg-theme-secondary-bg-color);
+    background: var(--tg-theme-bg-color);
     width: 100%;
     border: 2px solid;
     border-radius: 8px;
