--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ input:focus {
 #country {
     text-align: center;
     color: var(--tg-theme-text-color);
-    background: var(--tg-theme-bg-color);
-    width: 100%;
+    background: var(--tg-theme-button-color);
+    width: 90%;
     border: 2px solid;
     border-radius: 8px;
 }
