--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ order.addEventListener("click", () => {
     let user_name = document.getElementById("user_name").value;
     let user_phone = document.getElementById("user_phone").value;
     if (user_name.length < 4) {
-        mistake.innerText = "У вас слишком короткое имя :3";       
+        mistake.innerText = "У вас слишком короткое имя 😀";       
     }
     else if (user_phone.length < 10) {
         mistake.innerText = "Ошибка в номере телефона";
