--- a/index.html
+++ b/index.html
@@ -83,12 +83,20 @@ input:focus {
     width: 90%;
     border-radius: 8px;
 }
+#country_select {
+				width: 80%;
+				height: 80%;
+				background: var(--tg-theme-bg-color);
+}
 </style>
 </head>
 <body>
 <div id="main">
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
+<dialog id="country_select>
+<button id="russia_country>Russia</button>
+</dialog>
 </div>
 <div id="order_form">
 <p id="error"> </p>
