--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ input:focus {
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
 <dialog id="country_select>
-<button id="russia_country>Russia</button>
+<button id="russia_country">Russia</button>
 </dialog>
 </div>
 <div id="order_form">
