--- a/index.html
+++ b/index.html
@@ -88,15 +88,19 @@ input:focus {
     height: 80%;
     background: var(--tg-theme-bg-color);
 }
+#country_select {
+    display: none;
+    width: 100%;
+}
 </style>
 </head>
 <body>
 <div id="main">
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
-<dialog id="country_select>
+<div id="country_select>
 <button id="russia_country">Russia</button>
-</dialog>
+</div>
 </div>
 <div id="order_form">
 <p id="error"> </p>
