--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ input:focus {
 <div id="main">
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
+</div>
 <div id="country_select">
 <button id="russia_country">Russia</button>
 </div>
