--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-bg-color);
 }
-#main {
+#start {
     width: 100%;
     padding: 20px;
     text-align: center;
