--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ input:focus {
     border-radius: 0%
 }
 #russia_country_text, #russia_country_num {
-    display: inline-block;        
+    display: inline;        
 }
 </style>
 </head>
