--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ input:focus {
 </div>
 <div id="country_select">
 <div id="russia_country">
-<button id="russia_country_text">Россия&nbsp;&nbsp;<p id="russia_country_num">+7</p></button>
+<button id="russia_country_text">Россия&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p id="russia_country_num">+7</p></button>
 </div>
 </div>
 <div id="order_form">
