--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ input:focus {
 /*$(".phone").mask("+7(999)999-9999");*/
 let bot = window.Telegram.WebApp;
 let buy = document.getElementById("buy");
+let c_selected = "no";
 let order = document.getElementById("order");
 let start = document.getElementById("start");
 let order_form = document.getElementById("order_form");
