--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ let bot = window.Telegram.WebApp;
 let buy = document.getElementById("buy");
 let country_selected = "no";
 let order = document.getElementById("order");
-let input = document.getElementByTagName("input");
+let input = document.getElementsByTagName("input");
 let start = document.getElementById("start");
 let order_form = document.getElementById("order_form");
 let sure = document.getElementById("sure");
