--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ russia_country_text.addEventListener("click", () => {
 corr_phone.addEventListener("click", () => {
     bot.close();
 });
-input.addEventListener("focus", () => {
+user_name.addEventListener("focus", () => {
     mistake.innerText = " ";
 });
 user_phone.addEventListener("focus", () => {
