--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@ input:focus {
 #russia_country_num {
     color: var(--tg-theme-hint-color);    
 }
-#russia_country_text
-    border-radius: 0%
+#russia_country_text {
+    border-radius: 0%;
+    width: 100%;
+    background: var(--tg-theme-bg-color);
 }
 #russia_country_text, #russia_country_num {
     display: inline;        
