--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ input:focus {
 </div>
 <div id="country_select">
 <div id="russia_country">
-<button id="russia_country_but"><div id="russia_country_text>🇷🇺  Россия</div>&nbsp;&nbsp;&nbsp;&nbsp;<div id="russia_country_num">+7</div></button>
+<button id="russia_country_but"><div id="russia_country_text">🇷🇺  Россия</div>&nbsp;&nbsp;&nbsp;&nbsp;<div id="russia_country_num">+7</div></button>
 </div>
 </div>
 <div id="order_form">
