--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ input:focus {
     background: var(--tg-theme-bg-color);
 }
 #russia_country_text, #russia_country_num {
-    display: inline;        
+    display: inline;    
+    text-align: center;    
 }
 </style>
 </head>
