--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@ input:focus {
 <button id="buy">Начать делать заказ</button>
 </div>
 <div id="country_select">
+<center>
 <div id="russia_country">
 <button id="russia_country_but"><div id="russia_country_text">🇷🇺  Россия</div><div id="russia_country_num">+7</div></button>
 </div>
 <div id="kz_country">
 <button id="kz_country_but"><div id="kz_country_text">🇰🇿  Казахстан</div><div id="kz_country_num">+7</div></button>
 </div>
+</center>
 </div>
 <div id="order_form">
 <p id="error"> </p>
