--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ input:focus {
 <div id="country_select">
 <center>
 <div id="russia_country">
-<button id="russia_country_but"><div id="russia_country_text">🇷🇺  Россия</div><div id="russia_country_num">+7</div></button>
+<button id="russia_country_but"><div id="russia_country_text">🇷🇺  Россия</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<div id="russia_country_num">+7</div></button>
 </div>
 <div id="kz_country">
-<button id="kz_country_but"><div id="kz_country_text">🇰🇿  Казахстан</div><div id="kz_country_num">+7</div></button>
+<button id="kz_country_but"><div id="kz_country_text">🇰🇿  Казахстан</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<div id="kz_country_num">+7</div></button>
 </div>
 </center>
 </div>
