--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ russia_country_but.addEventListener("click", () => {
     order_form.style.display = "block";
     country_selected = "yes";
     $(".phone").mask("+7(999)999-9999");
-    country.innerHtml = "🇷🇺 Россия";
+    country.textContent = "🇷🇺 Россия";
     user_phone.focus();
 });
 kz_country_but.addEventListener("click", () => {
@@ -192,7 +192,7 @@ kz_country_but.addEventListener("click", () => {
     order_form.style.display = "block";
     country_selected = "yes";
     $(".phone").mask("+7(999)999-9999");
-    country.innerHtml = "🇰🇿 Казахстан";
+    country.textContent = "🇰🇿 Казахстан";
     user_phone.focus();
 });
 corr_phone.addEventListener("click", () => {
