--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ russia_country_but.addEventListener("click", () => {
     country_select.style.display = "none";
     order_form.style.display = "block";
     country_selected = "yes";
-    $(".phone").mask("+7(999)999-9999");
+    $(".phone").mask("+7 999 999 9999");
     country.textContent = "🇷🇺 Россия";
     user_phone.focus();
 });
@@ -194,7 +194,7 @@ russia_country_but.addEventListener("click", () => {
     country_select.style.display = "none";
     order_form.style.display = "block";
     country_selected = "yes";
-    $(".phone").mask("+7(999)999-9999");
+    $(".phone").mask("+7 999 999 9999");
     country.textContent = "🇰🇿  Казахстан";
     user_phone.focus();
 });
@@ -202,7 +202,7 @@ russia_country_but.addEventListener("click", () => {
     country_select.style.display = "none";
     order_form.style.display = "block";
     country_selected = "yes";
-    $(".phone").mask("+375(999)999-9999");
+    $(".phone").mask("+375 99 999 9999");
     country.textContent = "🇧🇾  Беларусь";
     user_phone.focus();
 });
