--- a/index.html
+++ b/index.html
@@ -92,18 +92,21 @@ input:focus {
     display: none;
     width: 100%;
 }
-#russia_country_num, #kz_country_num {
+#russia_country_num, #kz_country_num, #belarus_country_num {
     color: var(--tg-theme-hint-color);    
 }
-#russia_country_text, #kz_country_text {
+#russia_country_text, #kz_country_text, #belarus_country_text {
     border-radius: 0%;
     width: 100%;
     left: 80%;
 }
-#russia_country_text, #russia_country_num, #kz_country_text, #kz_country_num {
+#russia_country_text, #russia_country_num, #kz_country_text, #kz_country_num, #belarus_country_text, #belarus_country_num {
     display: inline;    
     text-align: center;    
 }
+#russia_country_but, #kz_country_but, #belarus_country_but {
+    width: 100%;
+} 
 </style>
 </head>
 <body>
