--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ russia_country_but.addEventListener("click", () => {
     country.textContent = "🇷🇺 Россия";
     user_phone.focus();
 });
-russia_country_but.addEventListener("click", () => {
+kz_country_but.addEventListener("click", () => {
     country_select.style.display = "none";
     order_form.style.display = "block";
     country_selected = "yes";
@@ -201,7 +201,7 @@ russia_country_but.addEventListener("click", () => {
     country.textContent = "🇰🇿  Казахстан";
     user_phone.focus();
 });
-russia_country_but.addEventListener("click", () => {
+belarus_country_but.addEventListener("click", () => {
     country_select.style.display = "none";
     order_form.style.display = "block";
     country_selected = "yes";
