--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ input:focus {
 <div id="kz_country">
 <button id="kz_country_but"><div id="kz_country_text">🇰🇿  Казахстан</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<div id="kz_country_num">+7</div></button>
 </div>
-<div id="belarus_country">
+<!--<div id="belarus_country">
 <button id="belarus_country_but"><div id="belarus_country_text">🇧🇾  Беларусь</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<div id="belarus_country_num">+375</div></button>
-</div></center>
+</div>--></center>
 </div>
 <div id="order_form">
 <p id="error"> </p>
