--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ let uncorr_phone = document.getElementById("uncorr_phone");
 let country = document.getElementById("country");
 let russia_country_but = document.getElementById("russia_country_but");
 let kz_country_but = document.getElementById("kz_country_but");
-let belarus_country_but = document.getElementById("kz_country_but");
+let belarus_country_but = document.getElementById("belarus_country_but");
 let country_select = document.getElementById("country_select");
 bot.expand();
 buy.addEventListener("click", () => {
