--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@ input:focus {
 </style>
 </head>
 <body>
+<Router>
+<Routes>
+<Route path="/desa" element={<Home />} />
+</Routes>
+</Router>
 <div id="start">
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
