--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@ input:focus {
 }
 #russia_country_but, #kz_country_but, #belarus_country_but {
     width: 100%;
-} 
+    background: var(--tg-theme-bg-color);
+}
+#russia_country_but:hover, #kz_country_but:hover, #belarus_country_but:hover {
+    background: var(--tg-theme-bg-color);
+}
 </style>
 </head>
 <body>
