--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ input:focus {
 }
 #russia_country_but, #kz_country_but, #belarus_country_but {
     width: 100%;
+    height: 30px;
     background: var(--tg-theme-bg-color);
 }
 #russia_country_but:hover, #kz_country_but:hover, #belarus_country_but:hover {
